[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
md5 = { version = "*", features = [] }

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"